Change K8s template reference

--- a/project-templates/kubernetes/0/project.yml
+++ b/project-templates/kubernetes/0/project.yml
@@ -2,7 +2,7 @@ name: Kubernetes
 description: Default Kubernetes template
 stacks:
   - name: kubernetes
-    templateId: 'library:infra*k8s'
+    templateId: 'jan:infra*k8s'
   - name: network-services
     templateId: 'library:infra*network-services'
   - name: ipsec
